# frymyresume.cv

./: .gitignore  .vercelignore  BEHAVIORAL_INTERVIEW_FIXES.md  BUGS_FIXED.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT_CHECKLIST.md  FRONTEND_DEBUG.md  GEMINI_LIVE_SETUP.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  Procfile  README.md  READY_FOR_DEPLOYMENT.md  SETUP_GUIDE.md  backend.py  frymyresume.db  integrate_v3.sh  main.py  pyproject.toml  requirements-backend.txt  requirements.txt  run_dev.sh  test_voice_response.py  vercel.json
app/: __init__.py  config.py  database.py  dependencies.py
app/models/: __init__.py  friend.py  job_application.py  user.py
app/routers/: __init__.py  auth.py  friends.py  jobs.py  users.py
app/schemas/: __init__.py  job.py  user.py
app/services/: auth.py  job_tracking.py  oauth.py
frontend/: INSTALL_MONACO.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.simple.tsx  App.test.tsx  App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: BehavioralInterview.css  BehavioralInterview.tsx  BehavioralInterviewLive.tsx  BehavioralInterviewLiveV2.tsx  CircleMeter.css  CircleMeter.tsx  ErrorBoundary.tsx  GlassCard.tsx  LoadingScreen.css  LoadingScreen.tsx  ProtectedRoute.tsx  TechnicalInterview.css  TechnicalInterview.tsx  ThemeToggle.css  ThemeToggle.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/data/: jobs.ts
frontend/src/hooks/: useJobTracking.ts
frontend/src/lib/: stt.ts  supabase.ts
frontend/src/pages/: Auth.css  JobSimulator.css  (+10 more)
(+1 files in other folders)
