[project]
name = "resume-critique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.50.1",
    "langchain>=1.0.7",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=3.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
]
